<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/aboutMenu"
            android:icon="@drawable/about"
            android:title="@string/about"
            />
        <item
            android:id="@+id/howItWorksMenu"
            android:icon="@drawable/howitworks"
            android:title="@string/how_it_works"/>
    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/logoutMenu"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/logout"
                />
        </menu>
    </item>
</menu>