<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGrey"
    android:id="@+id/main"
    tools:context=".HiwActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="607dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/hiwTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/hiw"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hiwSubTextView"
                android:layout_width="256dp"
                android:layout_height="76dp"
                android:gravity="center_vertical"
                android:text="@string/hiw_sub"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/hiwImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/hiw" />
        </LinearLayout>

        <TextView
            android:id="@+id/hiwDetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center|start"
            android:text="@string/hiw_detail"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>
